# podsignal

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  config.yaml  podcasts.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
api/: geocoder.py  main.py  pipeline.py  requirements.txt
podsignal/: __init__.py  __main__.py  dedup.py  guest_extractor.py  linkedin_finder.py  main.py  output_handler.py  rss_fetcher.py  synthesizer.py  utils.py
ui/: package-lock.json  package.json
